order-ticket-simulator/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: order-ticket-simulator
  namespace: zen-test
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
